Prevented slide counter word wrapping

--- a/src/scss/Slider.scss
+++ b/src/scss/Slider.scss
@@ -31,6 +31,12 @@
         margin: 0 2em 0 2em;
     }
 
+    .count {
+        white-space: nowrap;
+        word-break: keep-all;
+    }
+
+
     hr {
         border-color: #5A5A5A5A;
         border: 1px solid rgb(128, 128, 128);
